fdo#82290: Perform write(2) and read(2) concurrently to avoid pipe deadlock.

Change-Id: Ibd87c08b5367a87fb1eb9933925a5e4fe6fb352c